--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "71b2ad73",
    "metadata": {},
    "outputs": [],
@@ -57,16 +57,14 @@
     "from rich.console import Console\n",
     "from rich.theme import Theme\n",
     "\n",
-    "custom_theme = Theme(\n",
-    "    {\n",
-    "        \"white\": \"#FFFFFF\",  # Bright white\n",
-    "        \"info\": \"#00FF00\",  # Bright green\n",
-    "        \"warning\": \"#FFD700\",  # Bright gold\n",
-    "        \"error\": \"#FF1493\",  # Deep pink\n",
-    "        \"success\": \"#00FFFF\",  # Cyan\n",
-    "        \"highlight\": \"#FF4500\",  # Orange-red\n",
-    "    }\n",
-    ")\n",
+    "custom_theme = Theme({\n",
+    "    \"white\": \"#FFFFFF\",  # Bright white\n",
+    "    \"info\": \"#00FF00\",  # Bright green\n",
+    "    \"warning\": \"#FFD700\",  # Bright gold\n",
+    "    \"error\": \"#FF1493\",  # Deep pink\n",
+    "    \"success\": \"#00FFFF\",  # Cyan\n",
+    "    \"highlight\": \"#FF4500\",  # Orange-red\n",
+    "})\n",
     "console = Console(theme=custom_theme)\n",
     "\n",
     "\n",
@@ -131,22 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7c4dbb5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uuid import uuid4, UUID\n",
+    "from uuid import UUID, uuid4\n",
     "\n",
     "from config import app_config\n",
-    "from schemas.db_models import TaskResult, add_record_to_db, get_db_session, init_db\n",
+    "from schemas.db_models import (\n",
+    "    TaskResult,\n",
+    "    add_record_to_db,\n",
+    "    bulk_insert_records,\n",
+    "    get_db_session,\n",
+    "    init_db,\n",
+    ")\n",
     "\n",
     "init_db()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "361f70fd",
    "metadata": {},
    "outputs": [],
@@ -161,15 +165,14 @@
     "\n",
     "    task_id: str = Field(default_factory=lambda: uuid4().hex, description=\"Task id\")\n",
     "    task_name: str = Field(description=\"Task id\")\n",
-    "    status: Literal[\"pending\", \"completed\"] = Field(\n",
-    "        default=\"pending\", description=\"Task status\"\n",
-    "    )\n",
+    "    status: Literal[\"pending\", \"completed\"] = Field(default=\"pending\", description=\"Task status\")\n",
     "    result: dict[str, Any] = Field(default_factory=dict, description=\"Task result\")\n",
     "    error_message: str = Field(default=\"\", description=\"Error message\")\n",
     "    created_at: str = Field(default_factory=datetime.now, description=\"Creation time\")\n",
     "    completed_at: str | None = Field(default=None, description=\"Completion time\")\n",
     "\n",
     "    def to_data_model_dict(self) -> dict[str, Any]:\n",
+    "        \"\"\"Converts the task schema to a dictionary that can be inserted into the database.\"\"\"\n",
     "        return json.loads(self.model_dump_json())"
    ]
   },
@@ -321,11 +324,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ef37c13f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_data: list[dict[str, Any]] = [\n",
+    "    {\n",
+    "        \"task_name\": \"ner_1\",\n",
+    "        \"result\": {},\n",
+    "    },\n",
+    "    {\n",
+    "        \"task_name\": \"ner_2\",\n",
+    "        \"status\": \"completed\",\n",
+    "        \"result\": {},\n",
+    "    },\n",
+    "    {\n",
+    "        \"task_name\": \"ner_3\",\n",
+    "        \"status\": \"completed\",\n",
+    "        \"result\": {},\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "bulk_insert_records(input_data, schema=TaskSchema, data_model=TaskResult)"
+   ]
   },
   {
    "cell_type": "code",
