--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7c4dbb5c",
    "metadata": {},
    "outputs": [],
@@ -137,6 +137,7 @@
     "from uuid import UUID, uuid4\n",
     "\n",
     "from config import app_config\n",
+    "from schemas import EmailSchema, TaskSchema\n",
     "from schemas.db_models import (\n",
     "    TaskResult,\n",
     "    add_record_to_db,\n",
@@ -151,102 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "361f70fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "from pydantic import BaseModel, Field\n",
-    "\n",
-    "\n",
-    "class TaskSchema(BaseModel):\n",
-    "    \"\"\"Data schema for task results.\"\"\"\n",
-    "\n",
-    "    task_id: str = Field(default_factory=lambda: uuid4().hex, description=\"Task id\")\n",
-    "    task_name: str = Field(description=\"Task id\")\n",
-    "    status: Literal[\"pending\", \"completed\"] = Field(default=\"pending\", description=\"Task status\")\n",
-    "    result: dict[str, Any] = Field(default_factory=dict, description=\"Task result\")\n",
-    "    error_message: str = Field(default=\"\", description=\"Error message\")\n",
-    "    created_at: str = Field(default_factory=datetime.now, description=\"Creation time\")\n",
-    "    completed_at: str | None = Field(default=None, description=\"Completion time\")\n",
-    "\n",
-    "    def to_data_model_dict(self) -> dict[str, Any]:\n",
-    "        \"\"\"Converts the task schema to a dictionary that can be inserted into the database.\"\"\"\n",
-    "        return json.loads(self.model_dump_json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "663d98b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">TaskResult</span><span style=\"font-weight: bold\">(</span><span style=\"color: #808000; text-decoration-color: #808000\">task_id</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'a8ef694e2f4844bfb70d58a563f21440'</span>, <span style=\"color: #808000; text-decoration-color: #808000\">task_name</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'ner'</span>, <span style=\"color: #808000; text-decoration-color: #808000\">status</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'completed'</span><span style=\"font-weight: bold\">)</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;35mTaskResult\u001b[0m\u001b[1m(\u001b[0m\u001b[33mtask_id\u001b[0m=\u001b[32m'a8ef694e2f4844bfb70d58a563f21440'\u001b[0m, \u001b[33mtask_name\u001b[0m=\u001b[32m'ner'\u001b[0m, \u001b[33mstatus\u001b[0m=\u001b[32m'completed'\u001b[0m\u001b[1m)\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_data = TaskSchema(\n",
-    "    task_name=\"ner\",\n",
-    "    status=\"completed\",\n",
-    "    result={},\n",
-    "    error_message=\"\",\n",
-    ")\n",
-    "# console.print(_data.model_dump())\n",
-    "\n",
-    "res = TaskResult(**_data.to_data_model_dict())\n",
-    "console.print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "115fc9b4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'id'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'task_id'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'3571da0fbd534d8e9ef3757e95e31cad'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'task_name'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'ner'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'status'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'completed'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'result'</span>: <span style=\"font-weight: bold\">{}</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'error_message'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">''</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'created_at'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'2025-07-06T17:36:37.099697'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'completed_at'</span>: <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">datetime.datetime</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2025</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">17</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">36</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">37</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">101853</span><span style=\"font-weight: bold\">)</span>\n",
-       "<span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m{\u001b[0m\n",
-       "    \u001b[32m'id'\u001b[0m: \u001b[1;36m1\u001b[0m,\n",
-       "    \u001b[32m'task_id'\u001b[0m: \u001b[32m'3571da0fbd534d8e9ef3757e95e31cad'\u001b[0m,\n",
-       "    \u001b[32m'task_name'\u001b[0m: \u001b[32m'ner'\u001b[0m,\n",
-       "    \u001b[32m'status'\u001b[0m: \u001b[32m'completed'\u001b[0m,\n",
-       "    \u001b[32m'result'\u001b[0m: \u001b[1m{\u001b[0m\u001b[1m}\u001b[0m,\n",
-       "    \u001b[32m'error_message'\u001b[0m: \u001b[32m''\u001b[0m,\n",
-       "    \u001b[32m'created_at'\u001b[0m: \u001b[32m'2025-07-06T17:36:37.099697'\u001b[0m,\n",
-       "    \u001b[32m'completed_at'\u001b[0m: \u001b[1;35mdatetime.datetime\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m2025\u001b[0m, \u001b[1;36m7\u001b[0m, \u001b[1;36m6\u001b[0m, \u001b[1;36m17\u001b[0m, \u001b[1;36m36\u001b[0m, \u001b[1;36m37\u001b[0m, \u001b[1;36m101853\u001b[0m\u001b[1m)\u001b[0m\n",
-       "\u001b[1m}\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_data: dict[str, Any] = {\n",
     "    \"task_name\": \"ner\",\n",
@@ -275,42 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "44441795",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'id'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'task_id'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'0b088b1aabba47ed8400f5b5ebb3356b'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'task_name'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'ner_2'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'status'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'completed'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'result'</span>: <span style=\"font-weight: bold\">{}</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'error_message'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">''</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'created_at'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'2025-07-06T17:36:55.928586'</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'completed_at'</span>: <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">datetime.datetime</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2025</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">17</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">36</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">55</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">929272</span><span style=\"font-weight: bold\">)</span>\n",
-       "<span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m{\u001b[0m\n",
-       "    \u001b[32m'id'\u001b[0m: \u001b[1;36m2\u001b[0m,\n",
-       "    \u001b[32m'task_id'\u001b[0m: \u001b[32m'0b088b1aabba47ed8400f5b5ebb3356b'\u001b[0m,\n",
-       "    \u001b[32m'task_name'\u001b[0m: \u001b[32m'ner_2'\u001b[0m,\n",
-       "    \u001b[32m'status'\u001b[0m: \u001b[32m'completed'\u001b[0m,\n",
-       "    \u001b[32m'result'\u001b[0m: \u001b[1m{\u001b[0m\u001b[1m}\u001b[0m,\n",
-       "    \u001b[32m'error_message'\u001b[0m: \u001b[32m''\u001b[0m,\n",
-       "    \u001b[32m'created_at'\u001b[0m: \u001b[32m'2025-07-06T17:36:55.928586'\u001b[0m,\n",
-       "    \u001b[32m'completed_at'\u001b[0m: \u001b[1;35mdatetime.datetime\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m2025\u001b[0m, \u001b[1;36m7\u001b[0m, \u001b[1;36m6\u001b[0m, \u001b[1;36m17\u001b[0m, \u001b[1;36m36\u001b[0m, \u001b[1;36m55\u001b[0m, \u001b[1;36m929272\u001b[0m\u001b[1m)\u001b[0m\n",
-       "\u001b[1m}\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_data: dict[str, Any] = {\n",
     "    \"task_name\": \"ner_2\",\n",
@@ -324,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "ef37c13f",
    "metadata": {},
    "outputs": [],
@@ -351,19 +227,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5b8b5f77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import select"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "efac6ef7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">274df4c1e8fc4c29a1dbdd48370b0442\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "274df4c1e8fc4c29a1dbdd48370b0442\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "with get_db_session() as db:\n",
+    "    statement = select(TaskResult).filter_by(task_name=\"ner_2\")\n",
+    "    result = db.execute(statement).scalar_one()\n",
+    "    console.print(result.task_id)"
+   ]
   },
   {
    "cell_type": "code",
