chore: Update README

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -129,143 +129,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c4dbb5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from uuid import UUID, uuid4\n",
-    "\n",
-    "from config import app_config\n",
-    "from schemas import EmailSchema, TaskSchema\n",
-    "from schemas.db_models import (\n",
-    "    TaskResult,\n",
-    "    add_record_to_db,\n",
-    "    bulk_insert_records,\n",
-    "    get_db_session,\n",
-    "    init_db,\n",
-    ")\n",
-    "\n",
-    "init_db()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "115fc9b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data: dict[str, Any] = {\n",
-    "    \"task_name\": \"ner\",\n",
-    "    \"status\": \"completed\",\n",
-    "    \"result\": {},\n",
-    "}\n",
+    "import spacy\n",
     "\n",
-    "# result = add_record_to_db(input_data, schema=TaskSchema, data_model=TaskResult)\n",
-    "with get_db_session() as db:\n",
-    "    record = TaskResult(**TaskSchema(**input_data).to_data_model_dict())\n",
-    "    db.add(record)\n",
-    "    db.flush()\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
-    "    out = {\n",
-    "        \"id\": record.id,\n",
-    "        \"task_id\": record.task_id,\n",
-    "        \"task_name\": record.task_name,\n",
-    "        \"status\": record.status,\n",
-    "        \"result\": record.result,\n",
-    "        \"error_message\": record.error_message,\n",
-    "        \"created_at\": record.created_at,\n",
-    "        \"completed_at\": record.completed_at,\n",
-    "    }\n",
-    "    console.print(out)"
+    "\n",
+    "def smart_capitalize(text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Capitalizes proper nouns and named entities in the input text.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    text : str\n",
+    "        The input text to process.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "    \"\"\"\n",
+    "    doc = nlp(text)\n",
+    "    tokens: list[str] = []\n",
+    "    for token in doc:\n",
+    "        if token.pos_ == \"PROPN\" or token.pos_ == \"NOUN\" or token.ent_type_ != \"\":\n",
+    "            tokens.append(token.text.capitalize())\n",
+    "        else:\n",
+    "            print(token.text)\n",
+    "            tokens.append(token.text.lower())\n",
+    "    return \" \".join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "5f3a9b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-\n",
+      "BY\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'A - Cash Wdr by Olabode Shittu Akintuyi/17984202'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smart_capitalize(\"A-CASH WDR BY OLABODE SHITTU AKINTUYI/17984202\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "35c95c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A NOUN \n",
+      "- PUNCT \n",
+      "CASH NOUN \n",
+      "WDR NOUN \n",
+      "BY ADP \n",
+      "OLABODE PROPN ORG\n",
+      "SHITTU PROPN ORG\n",
+      "AKINTUYI/17984202 PROPN \n"
+     ]
+    }
+   ],
+   "source": [
+    "d = nlp(\"A-CASH WDR BY OLABODE SHITTU AKINTUYI/17984202\")\n",
+    "\n",
+    "for token in d:\n",
+    "    print(token.text, token.pos_, token.ent_type_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44441795",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_data: dict[str, Any] = {\n",
-    "    \"task_name\": \"ner_2\",\n",
-    "    \"status\": \"completed\",\n",
-    "    \"result\": {},\n",
-    "}\n",
-    "\n",
-    "out = add_record_to_db(input_data, schema=TaskSchema, data_model=TaskResult)\n",
-    "console.print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ef37c13f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_data: list[dict[str, Any]] = [\n",
-    "    {\n",
-    "        \"task_name\": \"ner_1\",\n",
-    "        \"result\": {},\n",
-    "    },\n",
-    "    {\n",
-    "        \"task_name\": \"ner_2\",\n",
-    "        \"status\": \"completed\",\n",
-    "        \"result\": {},\n",
-    "    },\n",
-    "    {\n",
-    "        \"task_name\": \"ner_3\",\n",
-    "        \"status\": \"completed\",\n",
-    "        \"result\": {},\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "bulk_insert_records(input_data, schema=TaskSchema, data_model=TaskResult)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5b8b5f77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import select"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "efac6ef7",
+   "id": "4f8a4269",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">274df4c1e8fc4c29a1dbdd48370b0442\n",
-       "</pre>\n"
-      ],
       "text/plain": [
-       "274df4c1e8fc4c29a1dbdd48370b0442\n"
+       "''"
       ]
      },
+     "execution_count": 141,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "with get_db_session() as db:\n",
-    "    statement = select(TaskResult).filter_by(task_name=\"ner_2\")\n",
-    "    result = db.execute(statement).scalar_one()\n",
-    "    console.print(result.task_id)"
+    "token."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0299b6fd",
+   "id": "72537b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2ba0d81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346f439f",
    "metadata": {},
    "outputs": [],
    "source": []
