chore: Updated the email sending logic

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5dc6e0f6",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
     "from sqlalchemy import delete, insert, select, update\n",
     "\n",
     "from schemas import EmailSchema\n",
-    "from schemas.db_models import EmailLog, get_db_session, init_db"
+    "from src.database.db_models import EmailLog, get_db_session, init_db"
    ]
   },
   {
@@ -597,304 +597,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65270bf5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "import time\n",
-    "from contextlib import contextmanager\n",
-    "from typing import Generator, Optional\n",
-    "\n",
-    "from sqlalchemy import create_engine, event\n",
-    "from sqlalchemy.engine import Engine\n",
-    "from sqlalchemy.exc import DisconnectionError, OperationalError\n",
-    "from sqlalchemy.orm import DeclarativeBase, Session, sessionmaker\n",
-    "from sqlalchemy.pool import QueuePool\n",
-    "\n",
-    "from config import app_config\n",
-    "from config.settings import refresh_settings\n",
-    "\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "settings = refresh_settings()\n",
-    "\n",
-    "\n",
-    "class DatabaseConnectionPool:\n",
-    "    \"\"\"\n",
-    "    A robust database connection pool manager with automatic reconnection,\n",
-    "    health monitoring, and optimized settings for concurrent workloads.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self._engine: Optional[Engine] = None\n",
-    "        self._session_factory: Optional[sessionmaker] = None\n",
-    "        self._database_url = self._get_database_url()\n",
-    "        self._setup_engine()\n",
-    "\n",
-    "    def _get_database_url(self) -> str:\n",
-    "        \"\"\"Get the appropriate database URL based on environment.\"\"\"\n",
-    "        if settings.ENVIRONMENT == \"test\":\n",
-    "            return app_config.db.db_path\n",
-    "        if settings.ENVIRONMENT in [\"dev\", \"prod\"]:\n",
-    "            return (\n",
-    "                f\"postgresql+psycopg2://{settings.POSTGRES_USER}:\"\n",
-    "                f\"{settings.POSTGRES_PASSWORD.get_secret_value()}\"\n",
-    "                f\"@localhost:{settings.POSTGRES_PORT}/{settings.POSTGRES_DB}\"\n",
-    "            )\n",
-    "        raise ValueError(f\"Unsupported environment: {settings.ENVIRONMENT}\")\n",
-    "\n",
-    "    def _setup_engine(self) -> None:\n",
-    "        \"\"\"Configure and create the database engine with optimized pool settings.\"\"\"\n",
-    "        pool_settings = {\n",
-    "            \"poolclass\": QueuePool,\n",
-    "            \"pool_size\": 20,  # Number of connections to maintain in the pool\n",
-    "            \"max_overflow\": 30,  # Additional connections beyond pool_size\n",
-    "            \"pool_timeout\": 30,  # Seconds to wait for a connection\n",
-    "            \"pool_recycle\": 3600,  # Recycle connections after 1 hour\n",
-    "            \"pool_pre_ping\": True,  # Validate connections before use\n",
-    "            \"pool_reset_on_return\": \"commit\",  # Reset connections on return\n",
-    "        }\n",
-    "\n",
-    "        # Additional engine settings for reliability\n",
-    "        engine_settings = {\n",
-    "            \"echo\": False,\n",
-    "            \"future\": True,  # Use SQLAlchemy 2.0 style\n",
-    "            \"connect_args\": {\n",
-    "                \"connect_timeout\": 10,\n",
-    "                \"application_name\": \"email_service\",\n",
-    "            }\n",
-    "            if settings.ENVIRONMENT != \"test\"\n",
-    "            else {},\n",
-    "        }\n",
-    "\n",
-    "        self._engine = create_engine(self._database_url, **pool_settings, **engine_settings)\n",
-    "\n",
-    "        # Set up event listeners for connection management\n",
-    "        self._setup_connection_events()\n",
-    "\n",
-    "        # Create session factory\n",
-    "        self._session_factory = sessionmaker(\n",
-    "            bind=self._engine,\n",
-    "            expire_on_commit=False,  # Keep objects accessible after commit\n",
-    "            autoflush=True,\n",
-    "            autocommit=False,\n",
-    "        )\n",
-    "\n",
-    "        logger.info(f\"Database connection pool initialized for {settings.ENVIRONMENT} environment\")\n",
-    "\n",
-    "    def _setup_connection_events(self) -> None:\n",
-    "        \"\"\"Set up SQLAlchemy event listeners for connection monitoring.\"\"\"\n",
-    "\n",
-    "        @event.listens_for(self._engine, \"connect\")\n",
-    "        def receive_connect(dbapi_connection, connection_record) -> None:\n",
-    "            \"\"\"Handle new connection events.\"\"\"\n",
-    "            logger.debug(\"New database connection established\")\n",
-    "\n",
-    "            # Set connection-specific settings for PostgreSQL\n",
-    "            if settings.ENVIRONMENT != \"test\":\n",
-    "                with dbapi_connection.cursor() as cursor:\n",
-    "                    cursor.execute(\"SET timezone='UTC'\")\n",
-    "                    cursor.execute(\"SET statement_timeout='30s'\")\n",
-    "\n",
-    "        @event.listens_for(self._engine, \"checkout\")\n",
-    "        def receive_checkout(dbapi_connection, connection_record, connection_proxy):\n",
-    "            \"\"\"Handle connection checkout events.\"\"\"\n",
-    "            logger.debug(\"Connection checked out from pool\")\n",
-    "\n",
-    "        @event.listens_for(self._engine, \"checkin\")\n",
-    "        def receive_checkin(dbapi_connection, connection_record):\n",
-    "            \"\"\"Handle connection checkin events.\"\"\"\n",
-    "            logger.debug(\"Connection returned to pool\")\n",
-    "\n",
-    "        @event.listens_for(self._engine, \"invalidate\")\n",
-    "        def receive_invalidate(dbapi_connection, connection_record, exception):\n",
-    "            \"\"\"Handle connection invalidation events.\"\"\"\n",
-    "            logger.warning(f\"Connection invalidated: {exception}\")\n",
-    "\n",
-    "    @contextmanager\n",
-    "    def get_session(self, max_retries: int = 3, retry_delay: float = 1.0) -> Generator[Session, None, None]:\n",
-    "        \"\"\"\n",
-    "        Get a database session with automatic retry logic and proper error handling.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        max_retries : int\n",
-    "            Maximum number of retry attempts for database operations\n",
-    "        retry_delay : float\n",
-    "            Delay between retry attempts in seconds\n",
-    "\n",
-    "        Yields\n",
-    "        ------\n",
-    "        Session\n",
-    "            An active SQLAlchemy database session\n",
-    "\n",
-    "        Raises\n",
-    "        ------\n",
-    "        OperationalError\n",
-    "            If database connection fails after all retries\n",
-    "        \"\"\"\n",
-    "        session = None\n",
-    "        last_exception = None\n",
-    "\n",
-    "        for attempt in range(max_retries + 1):\n",
-    "            try:\n",
-    "                session = self._session_factory()\n",
-    "                yield session\n",
-    "                session.commit()\n",
-    "                return\n",
-    "\n",
-    "            except (DisconnectionError, OperationalError) as e:\n",
-    "                last_exception = e\n",
-    "                if session:\n",
-    "                    session.rollback()\n",
-    "                    session.close()\n",
-    "                    session = None\n",
-    "\n",
-    "                if attempt < max_retries:\n",
-    "                    logger.warning(\n",
-    "                        f\"Database connection error (attempt {attempt + 1}/{max_retries + 1}): {e}. \"\n",
-    "                        f\"Retrying in {retry_delay}s...\"\n",
-    "                    )\n",
-    "                    time.sleep(retry_delay)\n",
-    "                    retry_delay *= 2  # Exponential backoff\n",
-    "                else:\n",
-    "                    logger.error(f\"Database connection failed after {max_retries + 1} attempts: {e}\")\n",
-    "                    raise\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                if session:\n",
-    "                    session.rollback()\n",
-    "                    session.close()\n",
-    "                logger.error(f\"Database operation failed: {e}\")\n",
-    "                raise\n",
-    "\n",
-    "        if last_exception:\n",
-    "            raise last_exception\n",
-    "\n",
-    "    def get_pool_status(self) -> dict:\n",
-    "        \"\"\"\n",
-    "        Get current connection pool status for monitoring.\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        dict\n",
-    "            Dictionary containing pool statistics\n",
-    "        \"\"\"\n",
-    "        if not self._engine or not hasattr(self._engine.pool, \"size\"):\n",
-    "            return {\"error\": \"Pool not initialized or not available\"}\n",
-    "\n",
-    "        pool = self._engine.pool\n",
-    "        return {\n",
-    "            \"pool_size\": pool.size(),\n",
-    "            \"checked_in\": pool.checkedin(),\n",
-    "            \"checked_out\": pool.checkedout(),\n",
-    "            \"overflow\": pool.overflow(),\n",
-    "            \"invalid\": pool.invalid(),\n",
-    "        }\n",
-    "\n",
-    "    def health_check(self) -> bool:\n",
-    "        \"\"\"\n",
-    "        Perform a health check on the database connection.\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        bool\n",
-    "            True if database is healthy, False otherwise\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            with self.get_session() as session:\n",
-    "                session.execute(\"SELECT 1\")\n",
-    "                return True\n",
-    "        except Exception as e:\n",
-    "            logger.error(f\"Database health check failed: {e}\")\n",
-    "            return False\n",
-    "\n",
-    "    def close(self) -> None:\n",
-    "        \"\"\"Close the database connection pool.\"\"\"\n",
-    "        if self._engine:\n",
-    "            self._engine.dispose()\n",
-    "            logger.info(\"Database connection pool closed\")\n",
-    "\n",
-    "    @property\n",
-    "    def engine(self) -> Engine:\n",
-    "        \"\"\"Get the database engine.\"\"\"\n",
-    "        return self._engine\n",
-    "\n",
-    "\n",
-    "class Base(DeclarativeBase):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "# Global connection pool instance\n",
-    "_db_pool: Optional[DatabaseConnectionPool] = None\n",
-    "\n",
-    "\n",
-    "def get_db_pool() -> DatabaseConnectionPool:\n",
-    "    \"\"\"\n",
-    "    Get or create the global database connection pool instance.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    DatabaseConnectionPool\n",
-    "        The global database connection pool\n",
-    "    \"\"\"\n",
-    "    global _db_pool\n",
-    "    if _db_pool is None:\n",
-    "        _db_pool = DatabaseConnectionPool()\n",
-    "    return _db_pool\n",
-    "\n",
-    "\n",
-    "@contextmanager\n",
-    "def get_db_session() -> Generator[Session, None, None]:\n",
-    "    \"\"\"\n",
-    "    Get a database session using the connection pool.\n",
-    "\n",
-    "    This is a drop-in replacement for your existing get_db_session function.\n",
-    "\n",
-    "    Yields\n",
-    "    ------\n",
-    "    Session\n",
-    "        An active SQLAlchemy database session\n",
-    "    \"\"\"\n",
-    "    db_pool = get_db_pool()\n",
-    "    with db_pool.get_session() as session:\n",
-    "        yield session\n",
-    "\n",
-    "\n",
-    "def init_db() -> None:\n",
-    "    \"\"\"\n",
-    "    Initialize the database connection and create all tables.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    None\n",
-    "    \"\"\"\n",
-    "    db_pool = get_db_pool()\n",
-    "    Base.metadata.create_all(db_pool.engine)\n",
-    "    logger.info(\"Database tables initialized\")\n",
-    "\n",
-    "\n",
-    "def get_db_health() -> dict:\n",
-    "    \"\"\"\n",
-    "    Get database health and pool status.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    dict\n",
-    "        Database health information\n",
-    "    \"\"\"\n",
-    "    db_pool = get_db_pool()\n",
-    "    return {\n",
-    "        \"healthy\": db_pool.health_check(),\n",
-    "        \"pool_status\": db_pool.get_pool_status(),\n",
-    "        \"environment\": settings.ENVIRONMENT,\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4f07da3c",
    "metadata": {},
    "outputs": [],
@@ -999,6 +701,7 @@
     "\n",
     "    @property\n",
     "    def engine(self) -> Engine:\n",
+    "        \"\"\"Get database engine.\"\"\"\n",
     "        return self._engine\n",
     "\n",
     "\n",
