feat: Deployed celery, beat and flower

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -223,7 +223,270 @@
    "id": "221d3b34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "services:\n",
+    "  local-rabbitmq: # 1st service\n",
+    "    image: rabbitmq:4.1.2-management\n",
+    "    container_name: local-rabbitmq # Also used as hostname\n",
+    "    env_file: # Location of file(s) containing the env vars. Only accessed by the container.\n",
+    "      - .env\n",
+    "    ports:\n",
+    "      - 5672:5672\n",
+    "      - 15672:15672\n",
+    "    volumes: # Persist the data volume\n",
+    "      - rabbitmq-data:/var/lib/rabbitmq\n",
+    "      # Volume mapping for the config file\n",
+    "      # It contains the RabbitMQ configuration\n",
+    "      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf\n",
+    "    healthcheck:\n",
+    "      test: [\"CMD\", \"rabbitmq-diagnostics\", \"check_port_connectivity\"]\n",
+    "      interval: 30s\n",
+    "      timeout: 10s\n",
+    "      retries: 5\n",
+    "\n",
+    "  postgres: # 2nd service\n",
+    "    image: postgres:17.5-bookworm\n",
+    "    # Remove name to allow Docker to automatically generate a name\n",
+    "    # when you have more than one replica\n",
+    "    # container_name: local-rmq-worker\n",
+    "    container_name: database\n",
+    "    env_file:\n",
+    "      - .env\n",
+    "    ports:\n",
+    "      - \"5433:5432\"\n",
+    "    volumes:\n",
+    "      - postgres_data:/var/lib/postgresql/data  # Bind mount for the data folder\n",
+    "    depends_on:\n",
+    "      local-rabbitmq:\n",
+    "        condition: service_healthy\n",
+    "    healthcheck:\n",
+    "      test: [\"CMD\", \"pg_isready -U user -d celery_db\"]\n",
+    "      interval: 30s\n",
+    "      timeout: 10s\n",
+    "      retries: 5\n",
+    "\n",
+    "  celery-worker: # 3rd service\n",
+    "    image: celery-worker:v1\n",
+    "    build:\n",
+    "      context: ./\n",
+    "      dockerfile: Dockerfile\n",
+    "    container_name: celery-worker\n",
+    "    environment:\n",
+    "      - RABBITMQ_HOST=local-rabbitmq\n",
+    "    env_file:\n",
+    "      - .env\n",
+    "    volumes:\n",
+    "      - ./data:/app/data  # Bind mount for the data folder\n",
+    "      - ./models:/app/models\n",
+    "    cpus: \"0.5\"\n",
+    "    develop:\n",
+    "    # Create a `watch` configuration to update the app\n",
+    "      watch:\n",
+    "        - action: sync\n",
+    "          path: ./\n",
+    "          target: /app\n",
+    "          # Folders and files to ignore\n",
+    "          ignore:\n",
+    "            - .venv\n",
+    "            - \"**/**/*.ipynb\"\n",
+    "        # Rebuild image if any of these files change\n",
+    "        - action: rebuild\n",
+    "          path: ./pyproject.toml\n",
+    "    depends_on:\n",
+    "      local-rabbitmq:\n",
+    "        condition: service_healthy\n",
+    "\n",
+    "  celery-beat: # 4th service\n",
+    "      image: celery-worker:v1\n",
+    "      build:\n",
+    "        context: ./\n",
+    "      container_name: celery-beat\n",
+    "      environment:\n",
+    "      - RABBITMQ_HOST=local-rabbitmq\n",
+    "      env_file:\n",
+    "        - .env\n",
+    "      command: uv run celery -A src.celery.app beat --loglevel=info\n",
+    "      depends_on:\n",
+    "        local-rabbitmq:\n",
+    "          condition: service_healthy\n",
+    "\n",
+    "  flower: # 5th service\n",
+    "      image: celery-worker:v1\n",
+    "      build:\n",
+    "        context: ./\n",
+    "      container_name: celery-flower\n",
+    "      command: uv run celery -A src.celery.app flower --basic_auth=$CELERY_FLOWER_USER:$CELERY_FLOWER_PASSWORD\n",
+    "      environment:\n",
+    "      - RABBITMQ_HOST=local-rabbitmq\n",
+    "      env_file:\n",
+    "        - .env\n",
+    "      ports:\n",
+    "        - \"5555:5555\"\n",
+    "      depends_on:\n",
+    "        local-rabbitmq:\n",
+    "          condition: service_healthy\n",
+    "\n",
+    "# Named volumes ONLY!\n",
+    "# Persist data outside the lifecycle of the container.\n",
+    "volumes:\n",
+    "  rabbitmq-data:\n",
+    "  postgres_data:\n",
+    "\n",
+    "\n",
+    "# Error logs\n",
+    "# celery-beat:\n",
+    "[2025-07-17 14:54:17,287: WARNING/MainProcess] sqlalchemy.exc\n",
+    "\n",
+    "[2025-07-17 14:54:17,288: WARNING/MainProcess] .\n",
+    "\n",
+    "[2025-07-17 14:54:17,288: WARNING/MainProcess] OperationalError\n",
+    "\n",
+    "[2025-07-17 14:54:17,288: WARNING/MainProcess] : \n",
+    "\n",
+    "[2025-07-17 14:54:17,288: WARNING/MainProcess] (psycopg2.OperationalError) connection to server at \"localhost\" (::1), port 5433 failed: Connection refused\n",
+    "\n",
+    "\tIs the server running on that host and accepting TCP/IP connections?\n",
+    "\n",
+    "connection to server at \"localhost\" (127.0.0.1), port 5433 failed: Connection refused\n",
+    "\n",
+    "\tIs the server running on that host and accepting TCP/IP connections?\n",
+    "\n",
+    "\n",
+    "(Background on this error at: https://sqlalche.me/e/20/e3q8)⁠\n",
+    "\n",
+    "celery beat v5.5.3 (immunity) is starting.\n",
+    "\n",
+    "__    -    ... __   -        _\n",
+    "\n",
+    "LocalTime -> 2025-07-17 14:54:15\n",
+    "\n",
+    "Configuration ->\n",
+    "\n",
+    "    . broker -> amqp://guest:**@localhost:5672//\n",
+    "\n",
+    "    . loader -> celery.loaders.app.AppLoader\n",
+    "\n",
+    "    . scheduler -> celery.beat.PersistentScheduler\n",
+    "\n",
+    "    . db -> celerybeat-schedule\n",
+    "\n",
+    "    . logfile -> [stderr]@%INFO\n",
+    "\n",
+    "    . maxinterval -> 5.00 minutes (300s)\n",
+    "\n",
+    "Exception ignored in: <function Shelf.__del__ at 0x7f96fada4360>\n",
+    "\n",
+    "Traceback (most recent call last):\n",
+    "\n",
+    "  File \"/usr/local/lib/python3.12/shelve.py\", line 162, in __del__\n",
+    "\n",
+    "  File \"/usr/local/lib/python3.12/shelve.py\", line 144, in close\n",
+    "\n",
+    "  File \"/usr/local/lib/python3.12/shelve.py\", line 168, in sync\n",
+    "\n",
+    "  File \"/usr/local/lib/python3.12/shelve.py\", line 124, in __setitem__\n",
+    "\n",
+    "_pickle.PicklingError: Can't pickle <class 'celery.beat.ScheduleEntry'>: import of module 'celery.beat' failed\n",
+    "\n",
+    "# celery-worker:\n",
+    " Downloading jupyterlab\n",
+    "\n",
+    " Downloading notebook\n",
+    "\n",
+    "Installed 91 packages in 1.02s\n",
+    "\n",
+    "Bytecode compiled 9881 files in 13.11s\n",
+    "\n",
+    "2025-07-17 14:54:27 - database_utilities - [INFO] - Connected to 'dev' environment database.\n",
+    "\n",
+    "2025-07-17 14:54:27 - database_utilities - [INFO] - Database connection pool initialized\n",
+    "\n",
+    "Traceback (most recent call last):\n",
+    "\n",
+    "  File \"/app/.venv/lib/python3.12/site-packages/sqlalchemy/engine/base.py\", line 145, in __init__\n",
+    "\n",
+    "    self._dbapi_connection = engine.raw_connection()\n",
+    "\n",
+    "# ==== TRUNCATED ====\n",
+    "\n",
+    "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "\n",
+    "  File \"/app/.venv/lib/python3.12/site-packages/psycopg2/__init__.py\", line 122, in connect\n",
+    "\n",
+    "    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)\n",
+    "\n",
+    "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "\n",
+    "sqlalchemy.exc.OperationalError: (psycopg2.OperationalError) connection to server at \"localhost\" (::1), port 5433 failed: Connection refused\n",
+    "\n",
+    "\tIs the server running on that host and accepting TCP/IP connections?\n",
+    "\n",
+    "connection to server at \"localhost\" (127.0.0.1), port 5433 failed: Connection refused\n",
+    "\n",
+    "\tIs the server running on that host and accepting TCP/IP connections?\n",
+    "\n",
+    "\n",
+    "(Background on this error at: https://sqlalche.me/e/20/e3q8)⁠\n",
+    "\n",
+    "# flower:\n",
+    "Bytecode compiled 9881 files in 1.22s\n",
+    "\n",
+    "[I 250717 14:54:04 command:168] Visit me at http://0.0.0.0:5555⁠\n",
+    "\n",
+    "[I 250717 14:54:04 command:176] Broker: amqp://guest:**@localhost:5672//\n",
+    "\n",
+    "[I 250717 14:54:05 command:177] Registered tasks: \n",
+    "\n",
+    "    ['celery.accumulate',\n",
+    "\n",
+    "     'celery.backend_cleanup',\n",
+    "\n",
+    "     'celery.chain',\n",
+    "\n",
+    "     'celery.chord',\n",
+    "\n",
+    "     'celery.chord_unlock',\n",
+    "\n",
+    "     'celery.chunks',\n",
+    "\n",
+    "     'celery.group',\n",
+    "\n",
+    "     'celery.map',\n",
+    "\n",
+    "     'celery.starmap',\n",
+    "\n",
+    "     'src.celery.tasks.data_processing.combine_processed_chunks',\n",
+    "\n",
+    "     'src.celery.tasks.data_processing.process_data_chunk',\n",
+    "\n",
+    "     'src.celery.tasks.data_processing.process_large_dataset',\n",
+    "\n",
+    "     'src.celery.tasks.email_tasks.send_bulk_emails',\n",
+    "\n",
+    "     'src.celery.tasks.email_tasks.send_email',\n",
+    "\n",
+    "     'src.celery.tasks.ml_prediction_tasks.combine_processed_chunks',\n",
+    "\n",
+    "     'src.celery.tasks.ml_prediction_tasks.ml_process_large_dataset',\n",
+    "\n",
+    "     'src.celery.tasks.ml_prediction_tasks.process_data_chunk',\n",
+    "\n",
+    "     'src.celery.tasks.periodic_tasks.cleanup_old_records',\n",
+    "\n",
+    "     'src.celery.tasks.periodic_tasks.health_check']\n",
+    "\n",
+    "[E 250717 14:54:11 events:191] Failed to capture events: '[Errno 111] Connection refused', trying again in 2 seconds.\n",
+    "\n",
+    "[E 250717 14:54:11 base_events:1833] Future exception was never retrieved\n",
+    "\n",
+    "    future: <Future finished exception=OperationalError('[Errno 111] Connection refused')>\n",
+    "\n",
+    "    Traceback (most recent call last):\n",
+    "\n",
+    "      File \"/app/.venv/lib/python3.12/site-packages/kombu/connection.py\", line 472, in _reraise_as_library_errors\n",
+    "\n",
+    "        yield"
+   ]
   },
   {
    "cell_type": "code",
