fix: Fixed status output

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -130,8 +130,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dd58e7d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'success',\n",
+       " 'response': {'data': {'person_id': 'q0bPCRQH',\n",
+       "   'survived': 1,\n",
+       "   'probability': 0.87},\n",
+       "  'status': 'success',\n",
+       "  'created_at': '2025-07-18T00:39:28.276767'},\n",
+       " 'sent_at': '2025-07-18T00:39:28.278007'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = {\n",
+    "    \"taskId\": \"a000ee85-e11b-4c61-a38f-f0b009b03c16\",\n",
+    "    \"status\": \"SUCCESS\",\n",
+    "    \"result\": '{\"status\": \"success\", \"response\": {\"data\": {\"person_id\": \"q0bPCRQH\", \"survived\": 1, \"probability\": 0.87}, \"status\": \"success\", \"created_at\": \"2025-07-18T00:39:28.276767\"}, \"sent_at\": \"2025-07-18T00:39:28.278007\"}',\n",
+    "}\n",
+    "\n",
+    "\n",
+    "json.loads(res[\"result\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "da6479d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DisabledBackend' object has no attribute '_get_task_meta_for'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcelery\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mresult\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AsyncResult\n\u001b[32m      3\u001b[39m task = AsyncResult(\u001b[33m\"\u001b[39m\u001b[33ma000ee85-e11b-4c61-a38f-f0b009b03c16\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mtask\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstate\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/MyProjects/batch-process/.venv/lib/python3.12/site-packages/celery/result.py:503\u001b[39m, in \u001b[36mAsyncResult.state\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    474\u001b[39m \u001b[38;5;129m@property\u001b[39m\n\u001b[32m    475\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstate\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    476\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"The tasks current state.\u001b[39;00m\n\u001b[32m    477\u001b[39m \n\u001b[32m    478\u001b[39m \u001b[33;03m    Possible values includes:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    501\u001b[39m \u001b[33;03m            then contains the tasks return value.\u001b[39;00m\n\u001b[32m    502\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m503\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_task_meta\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mstatus\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/MyProjects/batch-process/.venv/lib/python3.12/site-packages/celery/result.py:442\u001b[39m, in \u001b[36mAsyncResult._get_task_meta\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    440\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_get_task_meta\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    441\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._cache \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m442\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._maybe_set_cache(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mbackend\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_task_meta\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    443\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._cache\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/MyProjects/batch-process/.venv/lib/python3.12/site-packages/celery/backends/base.py:608\u001b[39m, in \u001b[36mBackend.get_task_meta\u001b[39m\u001b[34m(self, task_id, cache)\u001b[39m\n\u001b[32m    606\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m    607\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m608\u001b[39m         meta = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_task_meta_for\u001b[49m(task_id)\n\u001b[32m    609\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m    610\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "\u001b[31mAttributeError\u001b[39m: 'DisabledBackend' object has no attribute '_get_task_meta_for'"
+     ]
+    }
+   ],
+   "source": [
+    "from celery.result import AsyncResult\n",
+    "\n",
+    "task = AsyncResult(\"a000ee85-e11b-4c61-a38f-f0b009b03c16\")\n",
+    "task.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e7aa2eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    \"status\": \"success\",\n",
+    "    \"response\": {\n",
+    "        \"data\": {\"person_id\": \"q0bPCRQH\", \"survived\": 1, \"probability\": 0.87},\n",
+    "        \"status\": \"success\",\n",
+    "        \"created_at\": \"2025-07-18T00:57:39.790335\",\n",
+    "    },\n",
+    "    \"sent_at\": \"2025-07-18T00:57:39.791563\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93476bbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9d9d2fc",
    "metadata": {},
    "outputs": [],
    "source": []
